[JiShi] add mysql docker config and mysql mock data

--- a/backend/src/main/webapp/WEB-INF/resources/db.properties
+++ b/backend/src/main/webapp/WEB-INF/resources/db.properties
@@ -1,6 +1,6 @@
 dataSource.driverClass = com.mysql.jdbc.Driver
 dataSource.jdbcUrl = jdbc:mysql://127.0.0.1:3306/oj_system
-dataSource.user = root
+dataSource.user = oj_system
 dataSource.password = ft1998226
 dataSource.maxPoolSize = 20
 dataSource.maxIdleTime = 1000
